Compile our own JRE